examples/errors/loop_var_out_of_scope.ail
const B = 2
const D = 4

model {
  x [B, D]
  param W [D, 1]
  y = for i in range(0, 2) do matmul(x, W) end
  z = matmul(x, W)
}
